[gd_scene load_steps=4 format=3 uid="uid://bay00h3vqieoe"]

[ext_resource type="Script" path="res://Scripts/range_panel.gd" id="1_flitj"]
[ext_resource type="Texture2D" uid="uid://cb703kraugp85" path="res://Textures/S32.svg" id="2_rgv2g"]
[ext_resource type="Texture2D" uid="uid://cnyl16jr7jd8g" path="res://Textures/Dot.svg" id="3_vv6un"]

[node name="RangePanel" type="Panel"]
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.5
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_flitj")
metadata/_edit_use_anchors_ = true

[node name="RangeBar" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -806.0
offset_right = 86.0
offset_bottom = 807.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rgv2g")
patch_margin_top = 80
patch_margin_bottom = 80

[node name="MaxSlider" type="TextureRect" parent="RangeBar"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 16.0
offset_right = 69.0
offset_bottom = 154.0
grow_horizontal = 2
texture = ExtResource("3_vv6un")

[node name="MinSlider" type="TextureRect" parent="RangeBar"]
self_modulate = Color(1, 0.498039, 0.313726, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 652.0
offset_right = 69.0
offset_bottom = 790.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vv6un")

[node name="LabelTop" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 54
text = "Max Position:
100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelBot" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -151.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 54
text = "Min Position:
0%"
horizontal_alignment = 1
vertical_alignment = 1
